# fraud-detection-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml
alembic/: env.py  script.py.mako
alembic/versions/: baf2504045c2_create_transactions_and_alerts_tables.py
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/core/: config.py
api/app/db/: session.py
api/app/models/: __init__.py
api/app/routes/: alerts.py  health.py  transactions.py
grafana/provisioning/dashboards/: dashboard.yml  fraud_dashboard.json
grafana/provisioning/datasources/: postgres.yml
processor/: Dockerfile  db.py  detector.py  escalator.py  main.py  pyproject.toml
producer/: main.py  patterns.py  pyproject.toml
