[tool.poetry]
name = "fraud-detection-api"
version = "0.1.0"
description = "Fraud Detection FastAPI Service"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
pydantic = "^2.7"
pydantic-settings = "^2.3"
alembic = "^1.13"
kafka-python-ng = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"